Fixing topbar & news bar div to stretch to 100% of page width

--- a/2_css/CSS Project/css/styles.css
+++ b/2_css/CSS Project/css/styles.css
@@ -13,9 +13,9 @@ body {
         position: relative;
         top:-128px;
         background-color: rgba(30, 0, 0, 0.3);
-        width:100%;
+        width:100vw;
         padding: 0px 10px 0px 10px;
-        margin: 0px 10px 0px 0px;
+        margin: 0 auto;
         height:40px;
         color:white;
         z-index: 1;
@@ -25,8 +25,7 @@ body {
         position: relative;
         width:982px;
         margin: 0 auto;
-/*        left:20px;
-*/    }
+    }
 
     #logodiv {
         height: 32px;
@@ -100,17 +99,16 @@ body {
     }
 
     #red_masthead {
-        position:relative;
-        left:-260px;
-        z-index:0;
+        margin:0 auto;
         height:128px;
+        width:100%;
     }
 
     #newsbar {
         position: relative;
         top:-128px;
-        background-color: rgba(153, 0, 0, 0) !important;
-        width:100%;
+        background-color: rgba(153, 0, 0, 0);
+        width:100% !important;
         margin: 0;
         padding: 0px 10px 0px 10px;
         height:88px;
@@ -541,3 +539,8 @@ body {
         overflow:auto;
     }
 
+    #further_stories {
+        float:left;
+        height: 300px;
+        width: 625px;
+    }
